--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "test"
     },
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "gulp test"
     },
     "repository": {
         "type": "git",
@@ -51,5 +51,8 @@
         "tslib": "^1.9.3",
         "typescript": "^3.1.6",
         "vinyl-source-stream": "^2.0.0"
+    },
+    "dependencies": {
+        "ts-curry": "^1.0.4"
     }
 }
