--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
         "chai": "^4.2.0",
         "del": "^3.0.0",
         "fake-indexeddb": "^2.0.4",
-        "gulp": "^3.9.1",
+        "gulp": "4.0.0",
         "gulp-bump": "^3.1.1",
         "gulp-filter": "^5.1.0",
         "gulp-git": "^2.8.0",
         "gulp-mocha": "^6.0.0",
-        "gulp-stats": "0.0.4",
         "gulp-tag-version": "^1.3.1",
         "natives": "^1.1.6",
         "rollup": "^0.66.3",
@@ -47,7 +46,6 @@
         "rollup-plugin-node-resolve": "^3.4.0",
         "rollup-plugin-typescript": "^1.0.0",
         "rollup-stream": "^1.24.1",
-        "run-sequence": "^2.2.1",
         "tslib": "^1.9.3",
         "typescript": "^3.1.6",
         "vinyl-source-stream": "^2.0.0"
