--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "rollup-plugin-typescript": "^1.0.0",
         "rollup-stream": "^1.24.1",
         "tslib": "^1.9.3",
-        "typescript": "^3.1.6",
+        "typescript": "3.2.2",
         "vinyl-source-stream": "^2.0.0"
     },
     "dependencies": {
